[workspace]
members = [
    "blake2",
    "gost94",
    "groestl",
    "k12",
    "md2",
    "md4",
    "md5",
    "ripemd",
    "sha1",
    "sha2",
    "sha3",
    "shabal",
    "streebog",
    "whirlpool",
]

[profile.dev]
opt-level = 2

[replace]
"digest:0.10.0-pre.1" = { git = "https://github.com/RustCrypto/traits", branch = "digest_dev_fix" }
"block-buffer:0.10.0-pre" = { git = "https://github.com/RustCrypto/utils" }
