[package]
name = "ripemd160"
version = "0.9.1"
description = "RIPEMD-160 hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/ripemd160"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "ripemd160", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.10.0-pre.1", features = ["core-api"] }

[dev-dependencies]
digest = { version = "0.10.0-pre.1", features = ["dev"] }
hex-literal = "0.2"

[features]
default = ["std"]
std = ["digest/std"]
