[package]
name = "whirlpool"
version = "0.9.0"
description = "Whirlpool hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/whirlpool"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "whirlpool", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.10.0-pre.1", features = ["core-api"] }

[dev-dependencies]
digest = { version = "0.10.0-pre.1", features = ["dev"] }
hex-literal = "0.2"

[features]
default = ["std"]
std = ["digest/std"]
